[tool.poetry]
name = "base-racer"
version = "0.1.0"
description = ""
authors = ["patrick7adams <adamsp@esdallas.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
pygame = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
